--- a/fr/index.html
+++ b/fr/index.html
@@ -4,8 +4,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <title>COMBIEN DE TEMPS RESTE-T-IL À DONALD TRUMP COMME PRÉSIDENT ?</title>
+  <meta name="description" content="Compte à rebours en temps réel jusqu’au 20 janvier 2029, 12:00 (Washington). Outil simple de suivi et pages de référence sur les mandats présidentiels.">
 
+  <!-- canonical -->
   <link rel="canonical" href="https://presidencyclock.com/fr/">
+
+  <!-- hreflang (versions de la même page) -->
+  <link rel="alternate" hreflang="uk" href="https://presidencyclock.com/uk/">
+  <link rel="alternate" hreflang="en" href="https://presidencyclock.com/en/">
+  <link rel="alternate" hreflang="fr" href="https://presidencyclock.com/fr/">
+  <link rel="alternate" hreflang="es" href="https://presidencyclock.com/es/">
+  <link rel="alternate" hreflang="de" href="https://presidencyclock.com/de/">
+  <link rel="alternate" hreflang="x-default" href="https://presidencyclock.com/en/">
+
+  <!-- Open Graph / Twitter (laissé comme chez toi) -->
   <meta property="og:url" content="https://presidencyclock.com/fr/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="COMBIEN DE TEMPS RESTE-T-IL À DONALD TRUMP COMME PRÉSIDENT ?">
@@ -20,9 +32,29 @@
   <meta name="twitter:title" content="COMBIEN DE TEMPS RESTE-T-IL À DONALD TRUMP COMME PRÉSIDENT ?">
   <meta name="twitter:description" content="Compte à rebours jusqu’au 20 janvier 2029, 12:00 (Washington).">
 
+  <!-- AdSense owner -->
   <meta name="google-adsense-account" content="ca-pub-5023415479696725">
+
+  <!-- runtime favicon -->
   <link id="favicon" rel="icon" type="image/svg+xml" href="">
   <meta name="theme-color" content="#f6f8fd">
+
+  <!-- JSON-LD WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "name":"Presidency Clock",
+    "url":"https://presidencyclock.com/",
+    "inLanguage":"fr",
+    "publisher":{"@type":"Organization","name":"Presidency Clock","email":"presidencyclock@gmail.com"},
+    "potentialAction":{
+      "@type":"SearchAction",
+      "target":"https://presidencyclock.com/fr/?q={search_term_string}",
+      "query-input":"required name=search_term_string"
+    }
+  }
+  </script>
 
   <style>
     :root{
@@ -97,6 +129,12 @@
     .footer{opacity:.75;font-size:13px;text-align:center;margin:12px 0;padding-bottom:var(--safe-bottom)}
     .footer a{color:var(--accent);text-decoration:none}.footer a:hover{text-decoration:underline}
 
+    /* simple top nav */
+    .topnav{display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin:12px auto 10px}
+    .topnav a{color:inherit;text-decoration:none;font-weight:700;border:1px solid var(--line);background:var(--btn-bg);padding:.4rem .7rem;border-radius:999px}
+    .topnav a:hover{transform:translateY(-1px)}
+    .muted{color:var(--muted);font-size:.95em}
+
     @media (max-width:720px){
       .timer{grid-template-columns:repeat(2,minmax(0,1fr));gap:8px}
       .card{padding:10px}
@@ -124,6 +162,17 @@
   </div>
 
   <div class="wrap">
+
+    <!-- TOP NAV (liens internes /fr/) -->
+    <nav class="topnav" aria-label="Menu principal">
+      <a href="/fr/">Accueil</a>
+      <a href="/fr/about/">À propos</a>
+      <a href="/fr/presidents/">Présidents</a>
+      <a href="/fr/digest/">Digestes</a>
+      <a href="/fr/privacy/">Politique</a>
+      <a href="/fr/contact/">Contact</a>
+    </nav>
+
     <h1>COMBIEN DE TEMPS RESTE-T-IL À DONALD TRUMP<br>COMME PRÉSIDENT&nbsp;?</h1>
     <div class="subtitle">Compte à rebours jusqu’au <b>20 janvier 2029, 12:00 (Washington)</b>.</div>
 
@@ -164,10 +213,17 @@
            data-ad-slot="6745326926" data-ad-format="auto" data-full-width-responsive="true"></ins>
     </div>
 
+    <!-- BLOC DIGESTE (IA) -->
+    <div class="card" id="digest">
+      <h2 style="margin:6px 0 10px;">Digestes politiques (IA)</h2>
+      <p class="muted">Résumé IA des principales actus politiques dans le monde. Un nouveau numéro tous les 3 jours.</p>
+      <p><a href="/fr/digest/">Voir tous les digestes →</a></p>
+    </div>
+
     <div class="footer">
       <a id="consent" href="#">Paramètres des cookies</a> •
-      <a href="/privacy.html">Politique de confidentialité</a> •
-      <a href="/about.html">À propos</a>
+      <a href="/fr/privacy/">Politique de confidentialité</a> •
+      <a href="/fr/about/">À propos</a>
     </div>
 
     <div class="ad ad--bottom">
