--- a/en/index.html
+++ b/en/index.html
@@ -4,9 +4,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <title>HOW LONG DOES DONALD TRUMP HAVE LEFT AS PRESIDENT?</title>
+  <meta name="description" content="Real-time countdown to January 20, 2029, 12:00 (Washington). A simple tracker plus reference pages on presidential terms.">
 
   <!-- Canonical + OG/Twitter -->
   <link rel="canonical" href="https://presidencyclock.com/en/">
+
+  <!-- hreflang (same page in other languages) -->
+  <link rel="alternate" hreflang="uk" href="https://presidencyclock.com/uk/">
+  <link rel="alternate" hreflang="en" href="https://presidencyclock.com/en/">
+  <link rel="alternate" hreflang="fr" href="https://presidencyclock.com/fr/">
+  <link rel="alternate" hreflang="es" href="https://presidencyclock.com/es/">
+  <link rel="alternate" hreflang="de" href="https://presidencyclock.com/de/">
+  <link rel="alternate" hreflang="x-default" href="https://presidencyclock.com/en/">
+
   <meta property="og:url" content="https://presidencyclock.com/en/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="HOW LONG DOES DONALD TRUMP HAVE LEFT AS PRESIDENT?">
@@ -27,6 +37,23 @@
   <!-- Favicon (runtime SVG) -->
   <link id="favicon" rel="icon" type="image/svg+xml" href="">
   <meta name="theme-color" content="#f6f8fd">
+
+  <!-- JSON-LD WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "name":"Presidency Clock",
+    "url":"https://presidencyclock.com/",
+    "inLanguage":"en",
+    "publisher":{"@type":"Organization","name":"Presidency Clock","email":"presidencyclock@gmail.com"},
+    "potentialAction":{
+      "@type":"SearchAction",
+      "target":"https://presidencyclock.com/en/?q={search_term_string}",
+      "query-input":"required name=search_term_string"
+    }
+  }
+  </script>
 
   <style>
     :root{
@@ -120,6 +147,12 @@
     .footer{opacity:.75;font-size:13px;text-align:center;margin:12px 0;padding-bottom:var(--safe-bottom)}
     .footer a{color:var(--accent);text-decoration:none}.footer a:hover{text-decoration:underline}
 
+    /* simple top nav */
+    .topnav{display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin:12px auto 10px}
+    .topnav a{color:inherit;text-decoration:none;font-weight:700;border:1px solid var(--line);background:var(--btn-bg);padding:.4rem .7rem;border-radius:999px}
+    .topnav a:hover{transform:translateY(-1px)}
+    .muted{color:var(--muted);font-size:.95em}
+
     @media (max-width:720px){
       .timer{grid-template-columns:repeat(2,minmax(0,1fr));gap:8px}
       .card{padding:10px}
@@ -159,6 +192,17 @@
   </div>
 
   <div class="wrap" id="wrap">
+
+    <!-- TOP NAV (internal /en/ links) -->
+    <nav class="topnav" aria-label="Main menu">
+      <a href="/en/">Home</a>
+      <a href="/en/about/">About</a>
+      <a href="/en/presidents/">Presidents</a>
+      <a href="/en/digest/">Digests</a>
+      <a href="/en/privacy/">Privacy</a>
+      <a href="/en/contact/">Contact</a>
+    </nav>
+
     <h1 id="title">HOW LONG DOES DONALD TRUMP<br>HAVE LEFT AS PRESIDENT?</h1>
     <div class="subtitle" id="subtitle">Countdown to <b>January 20, 2029, 12:00 (Washington)</b>.</div>
 
@@ -207,6 +251,13 @@
            data-full-width-responsive="true"></ins>
     </div>
 
+    <!-- DIGEST BLOCK (AI) -->
+    <div class="card" id="digest">
+      <h2 style="margin:6px 0 10px;">Political digests (AI)</h2>
+      <p class="muted">Short AI summaries of major political news worldwide. A new edition every 3 days.</p>
+      <p><a href="/en/digest/">Browse all digests →</a></p>
+    </div>
+
     <details class="faq" id="faq">
       <summary>How is the time calculated?</summary>
       <div>
@@ -227,8 +278,8 @@
 
     <div class="footer" id="footer">
       <a id="consent" href="#">Cookie settings</a> •
-      <a id="linkPrivacy" href="/privacy.html">Privacy policy</a> •
-      <a id="linkAbout" href="/about.html">About</a> •
+      <a id="linkPrivacy" href="/en/privacy/">Privacy policy</a> •
+      <a id="linkAbout" href="/en/about/">About</a> •
       <a href="https://buymeacoffee.com/yourname" target="_blank" rel="noopener">Support</a>
     </div>
   </div>
