--- a/de/index.html
+++ b/de/index.html
@@ -4,8 +4,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <title>WIE LANGE IST DONALD TRUMP NOCH PRÄSIDENT?</title>
+  <meta name="description" content="Echtzeit-Countdown bis zum 20. Januar 2029, 12:00 (Washington). Ein einfacher Tracker plus Referenzseiten zu Amtszeiten von Präsidenten.">
 
+  <!-- Canonical -->
   <link rel="canonical" href="https://presidencyclock.com/de/">
+
+  <!-- hreflang (Sprachversionen derselben Seite) -->
+  <link rel="alternate" hreflang="uk" href="https://presidencyclock.com/uk/">
+  <link rel="alternate" hreflang="en" href="https://presidencyclock.com/en/">
+  <link rel="alternate" hreflang="fr" href="https://presidencyclock.com/fr/">
+  <link rel="alternate" hreflang="es" href="https://presidencyclock.com/es/">
+  <link rel="alternate" hreflang="de" href="https://presidencyclock.com/de/">
+  <link rel="alternate" hreflang="x-default" href="https://presidencyclock.com/en/">
+
+  <!-- Open Graph / Twitter -->
   <meta property="og:url" content="https://presidencyclock.com/de/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="WIE LANGE IST DONALD TRUMP NOCH PRÄSIDENT?">
@@ -20,9 +32,29 @@
   <meta name="twitter:title" content="WIE LANGE IST DONALD TRUMP NOCH PRÄSIDENT?">
   <meta name="twitter:description" content="Live-Countdown bis 20. Januar 2029, 12:00 (Washington).">
 
+  <!-- AdSense -->
   <meta name="google-adsense-account" content="ca-pub-5023415479696725">
+
+  <!-- runtime favicon -->
   <link id="favicon" rel="icon" type="image/svg+xml" href="">
   <meta name="theme-color" content="#f6f8fd">
+
+  <!-- JSON-LD WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "name":"Presidency Clock",
+    "url":"https://presidencyclock.com/",
+    "inLanguage":"de",
+    "publisher":{"@type":"Organization","name":"Presidency Clock","email":"presidencyclock@gmail.com"},
+    "potentialAction":{
+      "@type":"SearchAction",
+      "target":"https://presidencyclock.com/de/?q={search_term_string}",
+      "query-input":"required name=search_term_string"
+    }
+  }
+  </script>
 
   <style>
     :root{
@@ -97,6 +129,12 @@
     .footer{opacity:.75;font-size:13px;text-align:center;margin:12px 0;padding-bottom:var(--safe-bottom)}
     .footer a{color:var(--accent);text-decoration:none}.footer a:hover{text-decoration:underline}
 
+    /* einfache Top-Navigation */
+    .topnav{display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin:12px auto 10px}
+    .topnav a{color:inherit;text-decoration:none;font-weight:700;border:1px solid var(--line);background:var(--btn-bg);padding:.4rem .7rem;border-radius:999px}
+    .topnav a:hover{transform:translateY(-1px)}
+    .muted{color:var(--muted);font-size:.95em}
+
     @media (max-width:720px){
       .timer{grid-template-columns:repeat(2,minmax(0,1fr));gap:8px}
       .card{padding:10px}
@@ -124,6 +162,17 @@
   </div>
 
   <div class="wrap">
+
+    <!-- TOP NAV (interne /de/-Links) -->
+    <nav class="topnav" aria-label="Hauptmenü">
+      <a href="/de/">Startseite</a>
+      <a href="/de/about/">Über die Seite</a>
+      <a href="/de/presidents/">Präsidenten</a>
+      <a href="/de/digest/">Zusammenfassungen</a>
+      <a href="/de/privacy/">Datenschutz</a>
+      <a href="/de/contact/">Kontakt</a>
+    </nav>
+
     <h1>WIE LANGE IST DONALD TRUMP<br>NOCH PRÄSIDENT?</h1>
     <div class="subtitle">Countdown bis <b>20. Januar 2029, 12:00 (Washington)</b>.</div>
 
@@ -164,10 +213,17 @@
            data-ad-slot="6745326926" data-ad-format="auto" data-full-width-responsive="true"></ins>
     </div>
 
+    <!-- DIGEST-BLOCK (KI) -->
+    <div class="card" id="digest">
+      <h2 style="margin:6px 0 10px;">Politische Zusammenfassungen (KI)</h2>
+      <p class="muted">Kurze KI-Zusammenfassungen der wichtigsten politischen Nachrichten weltweit. Neue Ausgabe alle 3 Tage.</p>
+      <p><a href="/de/digest/">Alle Zusammenfassungen ansehen →</a></p>
+    </div>
+
     <div class="footer">
       <a id="consent" href="#">Cookie-Einstellungen</a> •
-      <a href="/privacy.html">Datenschutzerklärung</a> •
-      <a href="/about.html">Über die Seite</a>
+      <a href="/de/privacy/">Datenschutzerklärung</a> •
+      <a href="/de/about/">Über die Seite</a>
     </div>
 
     <div class="ad ad--bottom">
