--- a/uk/index.html
+++ b/uk/index.html
@@ -156,7 +156,8 @@
       <a href="/uk/about/">Про сайт</a>
       <a href="/uk/presidents/">Президенти</a>
       <a href="/uk/digest/">Дайджести</a>
-      <a href="/uk/privacy/">Політика</a>
+      <a id="consent" href="#">Налаштування cookies</a>
+      <a href="/uk/privacy/">Політика конфіденційності</a>
       <a href="/uk/contact/">Контакти</a>
     </nav>
 
