--- a/de/presidents/index.html
+++ b/de/presidents/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Präsidenten & Amtszeiten — Presidency Clock</title>
+  <title>Präsidenten und Amtszeiten — Presidency Clock</title>
 
   <link rel="canonical" href="https://presidencyclock.com/de/presidents/">
-  <meta name="description" content="Die letzten 5 Staats-/Regierungschefs je Land: Ukraine, USA, Kanada, Spanien, Mexiko, Frankreich. Beginn/Ende, Tage & ungefähre Jahre, durchschnittliche Amtszeit.">
+  <meta name="description" content="Die letzten 5 Führungspersonen je Land: Ukraine, USA, Kanada, Spanien, Mexiko, Frankreich. Beginn/Ende, Tage und ≈ Jahre, durchschnittliche Amtszeit.">
   <meta property="og:url" content="https://presidencyclock.com/de/presidents/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Präsidenten & Amtszeiten — Presidency Clock">
-  <meta property="og:description" content="Beginn/Ende, Tage und ungefähre Jahre je Land.">
+  <meta property="og:title" content="Präsidenten und Amtszeiten — Presidency Clock">
+  <meta property="og:description" content="Beginn/Ende, Tage und ≈ Jahre je Land.">
   <meta property="og:image" content="https://presidencyclock.com/og.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -18,8 +18,8 @@
   <meta property="og:locale" content="de_DE">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://presidencyclock.com/og.jpg">
-  <meta name="twitter:title" content="Präsidenten & Amtszeiten — Presidency Clock">
-  <meta name="twitter:description" content="Beginn/Ende, Tage & Jahre (≈); Durchschnitt.">
+  <meta name="twitter:title" content="Präsidenten und Amtszeiten — Presidency Clock">
+  <meta name="twitter:description" content="Beginn/Ende, Tage und ≈ Jahre, durchschnittliche Amtszeit.">
 
   <meta name="google-adsense-account" content="ca-pub-5023415479696725">
   <link id="favicon" rel="icon" type="image/svg+xml" href="">
@@ -68,8 +68,8 @@
   </div>
 
   <div class="wrap">
-    <h1>Präsidenten & Amtszeiten</h1>
-    <div class="subtitle">Die letzten 5 Staats-/Regierungschefs je Land. Wir zeigen <b>Beginn</b> und <b>Ende</b>, <b>Tage</b> und <b>≈ Jahre</b>. Sortiert vom kürzesten Mandat.</div>
+    <h1>Präsidenten und Amtszeiten</h1>
+    <div class="subtitle">Die letzten 5 Führungspersonen je Land. Wir zeigen <b>Beginn</b> und <b>Ende</b> der Amtszeit, <b>Tage</b> und <b>≈ Jahre</b>. Sortiert von der kürzesten zur längsten.</div>
 
     <div class="ad ad--top">
       <ins class="adsbygoogle" style="display:block;min-height:90px"
@@ -79,7 +79,7 @@
 
     <div class="nav">
       <a href="#ua">Ukraine</a>
-      <a href="#us">USA</a>
+      <a href="#us">Vereinigte Staaten</a>
       <a href="#ca">Kanada</a>
       <a href="#es">Spanien</a>
       <a href="#mx">Mexiko</a>
@@ -120,14 +120,14 @@
   applyTheme();
 
   const DATA = {
-    ua: { title:'Ukraine', note:'Gewählte Präsidenten (amtierende ausgeschlossen).', leaders:[
+    ua: { title:'Ukraine', note:'Gewählte Präsidenten (ohne Interimspräsidenten).', leaders:[
       {name:'Wolodymyr Selenskyj', start:'2019-05-20', end:null},
       {name:'Petro Poroschenko',   start:'2014-06-07', end:'2019-05-20'},
       {name:'Wiktor Janukowytsch', start:'2010-02-25', end:'2014-02-22'},
       {name:'Wiktor Juschtschenko',start:'2005-01-23', end:'2010-02-25'},
       {name:'Leonid Kutschma',     start:'1994-07-19', end:'2005-01-23'}
     ]},
-    us: { title:'USA', note:'Zwei nicht aufeinanderfolgende Amtszeiten werden getrennt aufgeführt.', leaders:[
+    us: { title:'Vereinigte Staaten', note:'Bei zwei nicht aufeinanderfolgenden Amtszeiten getrennt aufgeführt.', leaders:[
       {name:'Donald Trump (2. Amtszeit)', start:'2025-01-20', end:null},
       {name:'Joe Biden',                  start:'2021-01-20', end:'2025-01-20'},
       {name:'Donald Trump (1. Amtszeit)', start:'2017-01-20', end:'2021-01-20'},
@@ -141,12 +141,81 @@
       {name:'Jean Chrétien',  start:'1993-11-04', end:'2003-12-12'},
       {name:'Kim Campbell',   start:'1993-06-25', end:'1993-11-04'}
     ]},
-    es: { title:'Spanien', note:'Ministerpräsident („Präsident der Regierung“).', leaders:[
-      {name:'Pedro Sánchez',                start:'2018-06-02', end:null},
-      {name:'Mariano Rajoy',                start:'2011-12-21', end:'2018-06-01'},
-      {name:'José Luis Rodríguez Zapatero', start:'2004-04-17', end:'2011-12-21'},
-      {name:'José María Aznar',             start:'1996-05-05', end:'2004-04-17'},
-      {name:'Felipe González',              start:'1982-12-02', end:'1996-05-05'}
+    es: { title:'Spanien', note:'Ministerpräsident (Regierungschef).', leaders:[
+      {name:'Pedro Sánchez',                 start:'2018-06-02', end:null},
+      {name:'Mariano Rajoy',                 start:'2011-12-21', end:'2018-06-01'},
+      {name:'José Luis Rodríguez Zapatero',  start:'2004-04-17', end:'2011-12-21'},
+      {name:'José María Aznar',              start:'1996-05-05', end:'2004-04-17'},
+      {name:'Felipe González',               start:'1982-12-02', end:'1996-05-05'}
     ]},
     mx: { title:'Mexiko', note:'Präsident der Republik.', leaders:[
-      {name:'Claudia She
+      {name:'Claudia Sheinbaum',                     start:'2024-10-01', end:null},
+      {name:'Andrés Manuel López Obrador',           start:'2018-12-01', end:'2024-09-30'},
+      {name:'Enrique Peña Nieto',                    start:'2012-12-01', end:'2018-11-30'},
+      {name:'Felipe Calderón',                       start:'2006-12-01', end:'2012-11-30'},
+      {name:'Vicente Fox',                           start:'2000-12-01', end:'2006-11-30'}
+    ]},
+    fr: { title:'Frankreich', note:'Präsident der Republik.', leaders:[
+      {name:'Emmanuel Macron',     start:'2017-05-14', end:null},
+      {name:'François Hollande',   start:'2012-05-15', end:'2017-05-14'},
+      {name:'Nicolas Sarkozy',     start:'2007-05-16', end:'2012-05-15'},
+      {name:'Jacques Chirac',      start:'1995-05-17', end:'2007-05-16'},
+      {name:'François Mitterrand', start:'1981-05-21', end:'1995-05-17'}
+    ]}
+  };
+
+  const locale='de-DE';
+  const labels={ name:"Name", start:"Beginn", end:"Ende", days:"Tage", years:"Jahre (≈)", ongoing:"<small>läuft</small>", avg:"Durchschnittliche Amtszeit" };
+
+  const fmt=(d)=>d?new Date(d).toLocaleDateString(locale,{year:'numeric',month:'2-digit',day:'2-digit'}):'—';
+  function diffDays(a,b){ const A=new Date(a), B=b?new Date(b):new Date(); A.setHours(12,0,0,0); B.setHours(12,0,0,0); return Math.max(0, Math.round((B-A)/86400000)); }
+  function yearsApprox(days){ return (days/365.2425).toFixed(2); }
+
+  function renderCountry(id, block){
+    const wrap=document.createElement('div'); wrap.className='card'; wrap.id=id;
+    const h=document.createElement('h2'); h.textContent=block.title;
+    const note=document.createElement('div'); note.className='note'; note.textContent=block.note;
+
+    const table=document.createElement('table');
+    table.innerHTML=`<thead><tr>
+      <th>${labels.name}</th><th>${labels.start}</th><th>${labels.end}</th><th>${labels.days}</th><th>${labels.years}</th>
+    </tr></thead><tbody></tbody>`;
+
+    const rows=block.leaders.map(l=>{const d=diffDays(l.start,l.end);return {...l,days:d,yrs:yearsApprox(d)}}).sort((a,b)=>a.days-b.days);
+    const tb=table.querySelector('tbody');
+    rows.forEach(r=>{
+      const tr=document.createElement('tr');
+      tr.innerHTML=`<td>${r.name}</td><td>${fmt(r.start)}</td><td>${r.end?fmt(r.end):labels.ongoing}</td><td>${r.days.toLocaleString(locale)}</td><td>${r.yrs}</td>`;
+      tb.appendChild(tr);
+    });
+
+    const avgDays=Math.round(rows.reduce((s,x)=>s+x.days,0)/rows.length);
+    const avg=document.createElement('div'); avg.style.margin='8px 0 2px';
+    avg.innerHTML=`<span class="avg">${labels.avg}: ${avgDays.toLocaleString(locale)} ${labels.days} (~${yearsApprox(avgDays)} Jahre)</span>`;
+
+    wrap.appendChild(h); wrap.appendChild(note); wrap.appendChild(table); wrap.appendChild(avg);
+    return wrap;
+  }
+
+  function mount(){
+    const host=document.getElementById('tables'); if(!host) return; host.innerHTML='';
+    host.appendChild(renderCountry('ua',DATA.ua));
+    host.appendChild(renderCountry('us',DATA.us));
+    host.appendChild(renderCountry('ca',DATA.ca));
+    host.appendChild(renderCountry('es',DATA.es));
+    host.appendChild(renderCountry('mx',DATA.mx));
+    host.appendChild(renderCountry('fr',DATA.fr));
+  }
+  mount();
+
+  (function(){
+    const s=document.createElement('script'); s.async=true;
+    s.src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5023415479696725';
+    s.crossOrigin='anonymous';
+    s.onload=function(){ try{ const arr=(window.adsbygoogle=window.adsbygoogle||[]); document.querySelectorAll('ins.adsbygoogle').forEach(()=>arr.push({})); }catch(e){} };
+    document.head.appendChild(s);
+  })();
+})();
+</script>
+</body>
+</html>
